--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10839,7 +10839,7 @@ POR_the_deutschland_focus_desc:0 ""
 POR_portugiesisch_tactics:0 "Portugiesisch Tactics"
 POR_portugiesisch_tactics_desc:0 ""
 POR_failures_of_the_republic:0 "Failures Of The Republic"
-POR_failures_of_the_republic_desc:0 ""
+POR_failures_of_the_republic_desc:0 "the failures of the Republic are plain to see. It was too weak and divided. there will be no such problems in the new Portugal."
 POR_hamburg-porto_telegram:0 "Hamburg-Porto Telegram"
 POR_hamburg-porto_telegram_desc:0 ""
 POR_utilise_german_assets:0 "Utilise German Assets"
@@ -10853,7 +10853,7 @@ POR_operation_iberico_desc:0 ""
 POR_realise_long_lost_aims:0 "Realise Long Lost Aims"
 POR_realise_long_lost_aims_desc:0 ""
 POR_abolish_the_treaty_of_badajoz:0 "Abolish The Treaty Of Badajoz"
-POR_abolish_the_treaty_of_badajoz_desc:0 ""
+POR_abolish_the_treaty_of_badajoz_desc:0 "In 1801, Portugal was unfairly robbed of border territories by the Spanish and their French allies. Our attempts to regain it at the Congress of Vienna went unsupported by British. Its time this mistake was rectified."
 POR_linguistic_associations:0 "Linguistic Associations"
 POR_linguistic_associations_desc:0 ""
 POR_instigate_insurrections:0 "Instigate Insurrections"
@@ -10863,7 +10863,7 @@ POR_the_portugalician_dream_desc:0 ""
 POR_portugals_african_corridor:0 "Portugal's African Corridor"
 POR_portugals_african_corridor_desc:0 ""
 POR_revoke_the_1890_ultimatum:0 "Revoke The 1890 Ultimatum"
-POR_revoke_the_1890_ultimatum_desc:0 ""
+POR_revoke_the_1890_ultimatum_desc:0 "In 1890, our attempts to fufill the claims outlined in the Pink Map were thwarted By London, who issued an ultimatum, threatening war if they refused. Its time this stain on Portugese honour was erased."
 POR_the_austral_campaign:0 "The Austral Campaign"
 POR_the_austral_campaign_desc:0 ""
 POR_reconnect_the_exclave:0 "Reconnect The Exclave"
