--- a/localisation/english/POL - Poland_l_english.yml
+++ b/localisation/english/POL - Poland_l_english.yml
@@ -20,6 +20,9 @@
 
  ### Country Names ###
 
+ ### Factions ###
+ INTERMARIUM: "Intermarium"
+
 
  ### Leaders ###
  POL_jozef_pilsudski_desc:0 "A social and independence activist, former leader of the Polish Socialist Party, founder of the PPS Fighting Organisation and the Polish Military Organisation, commander of the 1st Brigade of the Polish Legions; Józef Piłsudski, surrounded by a cult among his soldiers and supporters, hated by his political enemies is a charismatic individual seeking to exercise dictatorial power in Poland as Chief of State. His character resembles the 18th century romantic and charismatic megalomaniac, his idol is Napoleon Bonaparte, whom he admires and whose spirit was to fly over the Pilsudski family's house at the birth of Józef. The Commandant, so called by his soldiers, is a supporter of the imperial Poland as a guide of the federation of countries located between the Baltic and the Black Sea. In fact, an anti-Russian, former Siberian exile, Piłsudski would most like to see Russia within its ethnographic borders. During his imprisonment in Magdeburg by the Germans, his legend in the country grew significantly and he became a person who could count on the support of society and left-wing parties during the growing social and revolutionary moods in Poland. The handing over of power to him by the Regency Council led to the moment for which Józef Piłsudski and his supporters was waiting for, becoming a dictator of Poland. However, Polish society is striving to rebuild the country on democratic principles and to restore the Sejm, the Polish Parliament. At such an important moment for Poland, the Commandant is conscious of the need to cooperate with all parties in the country and to strive for the formation of the Sejm, but this does not mean that he will resign from the function of the Chief of the State and stop strengthening his position and building his cult in society and the army, using the intrigues he has learned during the hard times of conspiracy. One thing is certain, Józef Piłsudski plays his own game about Poland and nobody really knows how it will end, quoting the Commandant: "My head is full of the wildest contradictions!""
@@ -123,7 +126,7 @@
  ww1_poland.32.a:0 "We demand all Lithuanian claimed lands!"
 
  ww1_poland.33.title:0 "Lithuanians are demanding their claimed lands!"
- pww1_poland.33.desc:0 "Lithuanians can enter into an alliance with Poland on condition that we hand over all the land to which they claim to be entitled, namely Wilno, Suwałki, Sokółka and Grodno. After conquering Wilejka, the region should also go to Lithuania. The Lithuanian government will reject the offer of the alliance if Poland does not meet these conditions!""
+ ww1_poland.33.desc:0 "Lithuanians can enter into an alliance with Poland on condition that we hand over all the land to which they claim to be entitled, namely Wilno, Suwałki, Sokółka and Grodno. After conquering Wilejka, the region should also go to Lithuania. The Lithuanian government will reject the offer of the alliance if Poland does not meet these conditions!""
  ww1_poland.33.a:0 "We will find another way..."
  ww1_poland.33.b:0 "It was supposed to be a federation, not an alliance... but OK ?"
 
