--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10859,11 +10859,11 @@ POR_linguistic_associations_desc:0 ""
 POR_instigate_insurrections:0 "Instigate Insurrections"
 POR_instigate_insurrections_desc:0 ""
 POR_the_portugalician_dream:0 "The Portugalician Dream"
-POR_the_portugalician_dream_desc:0 ""
+POR_the_portugalician_dream_desc:0 "For too long our Galician brothers have been kept separated from the fatherland by the Spaniards. Its time for re-unification."
 POR_portugals_african_corridor:0 "Portugal's African Corridor"
-POR_portugals_african_corridor_desc:0 ""
+POR_portugals_african_corridor_desc:0 "In 1890, the British forced us to give away our claims to various territories in Central Africa, preventing us from turning our colonies of Angola and Mozambique by land into one contiguous territory. It Proved to be a fatal blow for the Monarchy. This indignity shall be tolerated no longer!"
 POR_revoke_the_1890_ultimatum:0 "Revoke The 1890 Ultimatum"
-POR_revoke_the_1890_ultimatum_desc:0 "In 1890, our attempts to fufill the claims outlined in the Pink Map were thwarted By London, who issued an ultimatum, threatening war if they refused. Its time this stain on Portugese honour was erased."
+POR_revoke_the_1890_ultimatum_desc:0 "The British and their allies our embroiled in conflict. With aid from our new partners we shall finally reverse the diktat of 1890. Central Africa is Britains soft underbelly. The campaign shall be harsh and swift."
 POR_the_austral_campaign:0 "The Austral Campaign"
 POR_the_austral_campaign_desc:0 ""
 POR_reconnect_the_exclave:0 "Reconnect The Exclave"
