new minority system... again

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -42,7 +42,7 @@
  STATE_41: "Madrid"
  STATE_42: "Rhineland"
  STATE_43: "Northern Hungary"
- STATE_44: "Dirac"
+ STATE_44: "Dıraç"
  STATE_45: "Backa"
  STATE_46: "Muntenia"
  STATE_47: "Sterea Ellada"
@@ -452,7 +452,7 @@
  STATE_451: "Ortaköy"
  STATE_452: "Marsa Matruh"
  STATE_453: "Sinai"
- STATE_454: "Palestine"
+ STATE_454: "Jerusalem"
  STATE_455: "Karak"
  STATE_456: "Aswan"
  STATE_457: "Eastern Desert"
