--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -497,7 +497,7 @@
  VICTORY_POINTS_10687:0 "Walla Walla"
  VICTORY_POINTS_7386:0 "Tacoma"
  VICTORY_POINTS_10157:0 "Belingham"
- VICTORY_POINTS_12700:0 "Dirac"
+ VICTORY_POINTS_12700:0 "Dıraç"
  VICTORY_POINTS_1719:0 "Saint Paul"
  VICTORY_POINTS_3678:0 "Oakland"
  VICTORY_POINTS_11900:0 "Camden"
@@ -606,6 +606,7 @@
  VICTORY_POINTS_11826:0 "Yozgat"
  VICTORY_POINTS_1056:0 "Homs"
  VICTORY_POINTS_3656:0 "Akhaltsikhe"
+ VICTORY_POINTS_1088:0 "Latakia"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
