--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -3059,7 +3059,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_sofia_vilayet_desc:0 "§W[ottoman_sofia_vilayet_separatist_sentiments_desc]§!"
  ottoman_sofia_vilayet_tt_blocked:0 "[ottoman_sofia_vilayet_separatist_sentiments]"
  ottoman_sofia_vilayet_separatist_sentiments_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_sofia_vilayet_stability_factor][ottoman_sofia_vilayet_war_support_factor][ottoman_sofia_vilayet_political_power_factor]"
- ottoman_sofia_vilayet_separatist_sentiments_desc_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_sofia_vilayet_stability_factor][ottoman_sofia_vilayet_war_support_factor][ottoman_sofia_vilayet_political_power_factor]\n§YModifiers:§![ottoman_sofia_vilayet_48][ottoman_sofia_vilayet_48][ottoman_sofia_vilayet_199][ottoman_sofia_vilayet_821][ottoman_sofia_vilayet_876]"
+ ottoman_sofia_vilayet_separatist_sentiments_desc_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_sofia_vilayet_stability_factor][ottoman_sofia_vilayet_war_support_factor][ottoman_sofia_vilayet_political_power_factor]\n§YModifiers:§![ottoman_sofia_vilayet_48][ottoman_sofia_vilayet_199][ottoman_sofia_vilayet_821][ottoman_sofia_vilayet_876]"
  ottoman_sofia_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_sofia_stability_factor|=2%+]"
  ottoman_sofia_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_sofia_war_support_factor|=2%+]"
  ottoman_sofia_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_sofia_war_support_factor|=0%+]"
@@ -3072,7 +3072,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_danube_vilayet_desc:0 "§W[ottoman_danube_vilayet_separatist_sentiments_desc]§!"
  ottoman_danube_vilayet_tt_blocked:0 "[ottoman_danube_vilayet_separatist_sentiments]"
  ottoman_danube_vilayet_separatist_sentiments_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_danube_vilayet_stability_factor][ottoman_danube_vilayet_war_support_factor][ottoman_danube_vilayet_political_power_factor]"
- ottoman_danube_vilayet_separatist_sentiments_desc_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_danube_vilayet_stability_factor][ottoman_danube_vilayet_war_support_factor][ottoman_danube_vilayet_political_power_factor]\n§YModifiers:§![ottoman_danube_vilayet_211][ottoman_danube_vilayet_211][ottoman_danube_vilayet_912][ottoman_danube_vilayet_77][ottoman_danube_vilayet_846][ottoman_danube_vilayet_805]"
+ ottoman_danube_vilayet_separatist_sentiments_desc_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_danube_vilayet_stability_factor][ottoman_danube_vilayet_war_support_factor][ottoman_danube_vilayet_political_power_factor]\n§YModifiers:§![ottoman_danube_vilayet_211][ottoman_danube_vilayet_912][ottoman_danube_vilayet_77][ottoman_danube_vilayet_846][ottoman_danube_vilayet_805]"
  ottoman_danube_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_danube_stability_factor|=2%+]"
  ottoman_danube_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_danube_war_support_factor|=2%+]"
  ottoman_danube_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_danube_war_support_factor|=0%+]"
@@ -3082,6 +3082,118 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_danube_vilayet_846_yes:0 "\n§Y[846.GetName]§!:[TUR_south_slavic_population_846][TUR_romanian_population_846][TUR_turkish_population_846]"
  ottoman_danube_vilayet_805_yes:0 "\n§Y[805.GetName]§!:[TUR_romanian_population_805][TUR_turkish_population_805]"
 
+ TUR_serbia_vilayet:0 "Sırbistan Vilayet"
+ TUR_serbia_vilayet_desc:0 "§W[ottoman_serbia_vilayet_separatist_sentiments_desc]§!"
+ ottoman_serbia_vilayet_tt_blocked:0 "[ottoman_serbia_vilayet_separatist_sentiments]"
+ ottoman_serbia_vilayet_separatist_sentiments_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_serbia_vilayet_stability_factor][ottoman_serbia_vilayet_war_support_factor][ottoman_serbia_vilayet_political_power_factor]"
+ ottoman_serbia_vilayet_separatist_sentiments_desc_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_serbia_vilayet_stability_factor][ottoman_serbia_vilayet_war_support_factor][ottoman_serbia_vilayet_political_power_factor]\n§YModifiers:§![ottoman_serbia_vilayet_107][ottoman_serbia_vilayet_809]"
+ ottoman_serbia_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_serbia_stability_factor|=2%+]"
+ ottoman_serbia_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_serbia_war_support_factor|=2%+]"
+ ottoman_serbia_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_serbia_war_support_factor|=0%+]"
+ ottoman_serbia_vilayet_107_yes:0 "\n§Y[107.GetName]§!:[TUR_south_slavic_population_107]"
+ ottoman_serbia_vilayet_809_yes:0 "\n§Y[809.GetName]§!:[TUR_south_slavic_population_809]"
+
+ TUR_eflak_vilayet:0 "Eflak Vilayet"
+ TUR_eflak_vilayet_desc:0 "§W[ottoman_eflak_vilayet_separatist_sentiments_desc]§!"
+ ottoman_eflak_vilayet_tt_blocked:0 "[ottoman_eflak_vilayet_separatist_sentiments]"
+ ottoman_eflak_vilayet_separatist_sentiments_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_eflak_vilayet_stability_factor][ottoman_eflak_vilayet_war_support_factor][ottoman_eflak_vilayet_political_power_factor]"
+ ottoman_eflak_vilayet_separatist_sentiments_desc_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_eflak_vilayet_stability_factor][ottoman_eflak_vilayet_war_support_factor][ottoman_eflak_vilayet_political_power_factor]\n§YModifiers:§![ottoman_eflak_vilayet_46][ottoman_eflak_vilayet_81][ottoman_eflak_vilayet_866]"
+ ottoman_eflak_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_eflak_stability_factor|=2%+]"
+ ottoman_eflak_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_eflak_war_support_factor|=2%+]"
+ ottoman_eflak_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_eflak_war_support_factor|=0%+]"
+ ottoman_eflak_vilayet_46_yes:0 "\n§Y[46.GetName]§!:[TUR_romanian_population_46]"
+ ottoman_eflak_vilayet_81_yes:0 "\n§Y[81.GetName]§!:[TUR_romanian_population_81]"
+ ottoman_eflak_vilayet_866_yes:0 "\n§Y[866.GetName]§!:[TUR_romanian_population_866]"
+
+ TUR_bogdan_vilayet:0 "Bogdan Vilayet"
+ TUR_bogdan_vilayet_desc:0 "§W[ottoman_bogdan_vilayet_separatist_sentiments_desc]§!"
+ ottoman_bogdan_vilayet_tt_blocked:0 "[ottoman_bogdan_vilayet_separatist_sentiments]"
+ ottoman_bogdan_vilayet_separatist_sentiments_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_bogdan_vilayet_stability_factor][ottoman_bogdan_vilayet_war_support_factor][ottoman_bogdan_vilayet_political_power_factor]"
+ ottoman_bogdan_vilayet_separatist_sentiments_desc_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_bogdan_vilayet_stability_factor][ottoman_bogdan_vilayet_war_support_factor][ottoman_bogdan_vilayet_political_power_factor]\n§YModifiers:§![ottoman_bogdan_vilayet_79][ottoman_bogdan_vilayet_868][ottoman_bogdan_vilayet_867][ottoman_bogdan_vilayet_80][ottoman_bogdan_vilayet_1007][ottoman_bogdan_vilayet_78]"
+ ottoman_bogdan_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_bogdan_stability_factor|=2%+]"
+ ottoman_bogdan_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_bogdan_war_support_factor|=2%+]"
+ ottoman_bogdan_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_bogdan_war_support_factor|=0%+]"
+ ottoman_bogdan_vilayet_79_yes:0 "\n§Y[79.GetName]§!:[TUR_greek_population_79]"
+ ottoman_bogdan_vilayet_868_yes:0 "\n§Y[868.GetName]§!:[TUR_romanian_population_868]"
+ ottoman_bogdan_vilayet_867_yes:0 "\n§Y[867.GetName]§!:[TUR_romanian_population_867]"
+ ottoman_bogdan_vilayet_80_yes:0 "\n§Y[80.GetName]§!:[TUR_romanian_population_80]"
+ ottoman_bogdan_vilayet_1007_yes:0 "\n§Y[1007.GetName]§!:[TUR_romanian_population_1007]"
+ ottoman_bogdan_vilayet_78_yes:0 "\n§Y[78.GetName]§!:[TUR_romanian_population_78]"
+
+ TUR_attika_vilayet:0 "Attika Vilayet"
+ TUR_attika_vilayet_desc:0 "§W[ottoman_attika_vilayet_separatist_sentiments_desc]§!"
+ ottoman_attika_vilayet_tt_blocked:0 "[ottoman_attika_vilayet_separatist_sentiments]"
+ ottoman_attika_vilayet_separatist_sentiments_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_attika_vilayet_stability_factor][ottoman_attika_vilayet_war_support_factor][ottoman_attika_vilayet_political_power_factor]"
+ ottoman_attika_vilayet_separatist_sentiments_desc_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_attika_vilayet_stability_factor][ottoman_attika_vilayet_war_support_factor][ottoman_attika_vilayet_political_power_factor]\n§YModifiers:§![ottoman_attika_vilayet_898][ottoman_attika_vilayet_47][ottoman_attika_vilayet_186]"
+ ottoman_attika_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_attika_stability_factor|=2%+]"
+ ottoman_attika_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_attika_war_support_factor|=2%+]"
+ ottoman_attika_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_attika_war_support_factor|=0%+]"
+ ottoman_attika_vilayet_898_yes:0 "\n§Y[898.GetName]§!:[TUR_greek_population_898]"
+ ottoman_attika_vilayet_47_yes:0 "\n§Y[47.GetName]§!:[TUR_greek_population_47]"
+ ottoman_attika_vilayet_186_yes:0 "\n§Y[186.GetName]§!:[TUR_greek_population_186]"
+
+ TUR_transylvania_vilayet:0 "Transylvania Vilayet"
+ TUR_transylvania_vilayet_desc:0 "§W[ottoman_transylvania_vilayet_separatist_sentiments_desc]§!"
+ ottoman_transylvania_vilayet_tt_blocked:0 "[ottoman_transylvania_vilayet_separatist_sentiments]"
+ ottoman_transylvania_vilayet_separatist_sentiments_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_transylvania_vilayet_stability_factor][ottoman_transylvania_vilayet_war_support_factor][ottoman_transylvania_vilayet_political_power_factor]"
+ ottoman_transylvania_vilayet_separatist_sentiments_desc_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_transylvania_vilayet_stability_factor][ottoman_transylvania_vilayet_war_support_factor][ottoman_transylvania_vilayet_political_power_factor]\n§YModifiers:§![ottoman_transylvania_vilayet_76][ottoman_transylvania_vilayet_84][ottoman_transylvania_vilayet_778][ottoman_transylvania_vilayet_83]"
+ ottoman_transylvania_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_transylvania_stability_factor|=2%+]"
+ ottoman_transylvania_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_transylvania_war_support_factor|=2%+]"
+ ottoman_transylvania_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_transylvania_war_support_factor|=0%+]"
+ ottoman_transylvania_vilayet_76_yes:0 "\n§Y[76.GetName]§!:[TUR_romanian_population_76]"
+ ottoman_transylvania_vilayet_84_yes:0 "\n§Y[84.GetName]§!:[TUR_romanian_population_84]"
+ ottoman_transylvania_vilayet_778_yes:0 "\n§Y[778.GetName]§!:[TUR_romanian_population_778]"
+ ottoman_transylvania_vilayet_83_yes:0 "\n§Y[83.GetName]§!:[TUR_romanian_population_83]"
+
+ TUR_banat_vilayet:0 "Banat Vilayet"
+ TUR_banat_vilayet_desc:0 "§W[ottoman_banat_vilayet_separatist_sentiments_desc]§!"
+ ottoman_banat_vilayet_tt_blocked:0 "[ottoman_banat_vilayet_separatist_sentiments]"
+ ottoman_banat_vilayet_separatist_sentiments_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_banat_vilayet_stability_factor][ottoman_banat_vilayet_war_support_factor][ottoman_banat_vilayet_political_power_factor]"
+ ottoman_banat_vilayet_separatist_sentiments_desc_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_banat_vilayet_stability_factor][ottoman_banat_vilayet_war_support_factor][ottoman_banat_vilayet_political_power_factor]\n§YModifiers:§![ottoman_banat_vilayet_82][ottoman_banat_vilayet_764][ottoman_banat_vilayet_45][ottoman_banat_vilayet_575]"
+ ottoman_banat_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_banat_stability_factor|=2%+]"
+ ottoman_banat_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_banat_war_support_factor|=2%+]"
+ ottoman_banat_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_banat_war_support_factor|=0%+]"
+ ottoman_banat_vilayet_82_yes:0 "\n§Y[82.GetName]§!:[TUR_romanian_population_82]"
+ ottoman_banat_vilayet_764_yes:0 "\n§Y[764.GetName]§!:[TUR_south_slavic_population_764]"
+ ottoman_banat_vilayet_45_yes:0 "\n§Y[45.GetName]§!:[TUR_south_slavic_population_45]"
+ ottoman_banat_vilayet_575_yes:0 "\n§Y[575.GetName]§!:[TUR_south_slavic_population_575]"
+
+ TUR_carniola_vilayet:0 "Karniyola Vilayet"
+ TUR_carniola_vilayet_desc:0 "§W[ottoman_carniola_vilayet_separatist_sentiments_desc]§!"
+ ottoman_carniola_vilayet_tt_blocked:0 "[ottoman_carniola_vilayet_separatist_sentiments]"
+ ottoman_carniola_vilayet_separatist_sentiments_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_carniola_vilayet_stability_factor][ottoman_carniola_vilayet_war_support_factor][ottoman_carniola_vilayet_political_power_factor]"
+ ottoman_carniola_vilayet_separatist_sentiments_desc_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_carniola_vilayet_stability_factor][ottoman_carniola_vilayet_war_support_factor][ottoman_carniola_vilayet_political_power_factor]\n§YModifiers:§![ottoman_carniola_vilayet_102][ottoman_carniola_vilayet_1010][ottoman_carniola_vilayet_736][ottoman_carniola_vilayet_875]"
+ ottoman_carniola_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_carniola_stability_factor|=2%+]"
+ ottoman_carniola_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_carniola_war_support_factor|=2%+]"
+ ottoman_carniola_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_carniola_war_support_factor|=0%+]"
+ ottoman_carniola_vilayet_102_yes:0 "\n§Y[102.GetName]§!:[TUR_romanian_population_102]"
+ ottoman_carniola_vilayet_1010_yes:0 "\n§Y[1010.GetName]§!:[TUR_romanian_population_1010]"
+ ottoman_carniola_vilayet_736_yes:0 "\n§Y[736.GetName]§!:[TUR_romanian_population_736]"
+ ottoman_carniola_vilayet_875_yes:0 "\n§Y[875.GetName]§!:[TUR_romanian_population_875]"
+
+ TUR_croatia_vilayet:0 "Hırvatistan Vilayet"
+ TUR_croatia_vilayet_desc:0 "§W[ottoman_croatia_vilayet_separatist_sentiments_desc]§!"
+ ottoman_croatia_vilayet_tt_blocked:0 "[ottoman_croatia_vilayet_separatist_sentiments]"
+ ottoman_croatia_vilayet_separatist_sentiments_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_croatia_vilayet_stability_factor][ottoman_croatia_vilayet_war_support_factor][ottoman_croatia_vilayet_political_power_factor]"
+ ottoman_croatia_vilayet_separatist_sentiments_desc_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_croatia_vilayet_stability_factor][ottoman_croatia_vilayet_war_support_factor][ottoman_croatia_vilayet_political_power_factor]\n§YModifiers:§![ottoman_croatia_vilayet_109][ottoman_croatia_vilayet_208][ottoman_croatia_vilayet_513]"
+ ottoman_croatia_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_croatia_stability_factor|=2%+]"
+ ottoman_croatia_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_croatia_war_support_factor|=2%+]"
+ ottoman_croatia_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_croatia_war_support_factor|=0%+]"
+ ottoman_croatia_vilayet_109_yes:0 "\n§Y[109.GetName]§!:[TUR_romanian_population_109]"
+ ottoman_croatia_vilayet_208_yes:0 "\n§Y[208.GetName]§!:[TUR_romanian_population_208]"
+ ottoman_croatia_vilayet_513_yes:0 "\n§Y[513.GetName]§!:[TUR_romanian_population_513]"
+
+ TUR_dalmatia_vilayet:0 "Dalmaçya Vilayet"
+ TUR_dalmatia_vilayet_desc:0 "§W[ottoman_dalmatia_vilayet_separatist_sentiments_desc]§!"
+ ottoman_dalmatia_vilayet_tt_blocked:0 "[ottoman_dalmatia_vilayet_separatist_sentiments]"
+ ottoman_dalmatia_vilayet_separatist_sentiments_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_dalmatia_vilayet_stability_factor][ottoman_dalmatia_vilayet_war_support_factor][ottoman_dalmatia_vilayet_political_power_factor]"
+ ottoman_dalmatia_vilayet_separatist_sentiments_desc_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_dalmatia_vilayet_stability_factor][ottoman_dalmatia_vilayet_war_support_factor][ottoman_dalmatia_vilayet_political_power_factor]\n§YModifiers:§![ottoman_dalmatia_vilayet_103][ottoman_dalmatia_vilayet_163][ottoman_dalmatia_vilayet_1006]"
+ ottoman_dalmatia_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_dalmatia_stability_factor|=2%+]"
+ ottoman_dalmatia_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_dalmatia_war_support_factor|=2%+]"
+ ottoman_dalmatia_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_dalmatia_war_support_factor|=0%+]"
+ ottoman_dalmatia_vilayet_103_yes:0 "\n§Y[103.GetName]§!:[TUR_romanian_population_103]"
+ ottoman_dalmatia_vilayet_163_yes:0 "\n§Y[163.GetName]§!:[TUR_romanian_population_163]"
+ ottoman_dalmatia_vilayet_1006_yes:0 "\n§Y[1006.GetName]§!:[TUR_romanian_population_1006]"
 
 
  TUR_armenian_millet_text_tt:0 "[TUR_armenian_millet_text_tt]"
