--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -673,7 +673,7 @@
  STATE_672: "Sumatra"
  STATE_673: "Sulawesi"
  STATE_674: "Central Australia"
- STATE_675: "Razzaza"
+ STATE_675: "Al Anbar"
  STATE_676: "Mosul"
  STATE_677: "Aleppo"
  STATE_678: "Rub al Khali"
@@ -852,7 +852,7 @@
  STATE_851: "Geneva"
  STATE_852: "Latakia"
  STATE_853: "Tikrit"
- STATE_854: "Hüdavendigâr"
+ STATE_854: "Bursa"
  STATE_855: "Adjaria"
  STATE_856: "Beersheba"
  STATE_857: "Osmaniye"
