--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -3195,6 +3195,58 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_dalmatia_vilayet_163_yes:0 "\n§Y[163.GetName]§!:[TUR_romanian_population_163]"
  ottoman_dalmatia_vilayet_1006_yes:0 "\n§Y[1006.GetName]§!:[TUR_romanian_population_1006]"
 
+ TUR_archipelago_vilayet:0 "Archipelago Vilayet"
+ TUR_archipelago_vilayet_desc:0 "§W[ottoman_archipelago_vilayet_separatist_sentiments_desc]§!"
+ ottoman_archipelago_vilayet_tt_blocked:0 "[ottoman_archipelago_vilayet_separatist_sentiments]"
+ ottoman_archipelago_vilayet_separatist_sentiments_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_archipelago_vilayet_stability_factor][ottoman_archipelago_vilayet_war_support_factor][ottoman_archipelago_vilayet_political_power_factor]"
+ ottoman_archipelago_vilayet_separatist_sentiments_desc_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_archipelago_vilayet_stability_factor][ottoman_archipelago_vilayet_war_support_factor][ottoman_archipelago_vilayet_political_power_factor]\n§YModifiers:§![ottoman_archipelago_vilayet_790][ottoman_archipelago_vilayet_975][ottoman_archipelago_vilayet_974][ottoman_archipelago_vilayet_900][ottoman_archipelago_vilayet_164][ottoman_archipelago_vilayet_899][ottoman_archipelago_vilayet_183]"
+ ottoman_archipelago_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_archipelago_stability_factor|=2%+]"
+ ottoman_archipelago_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_archipelago_war_support_factor|=2%+]"
+ ottoman_archipelago_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_archipelago_war_support_factor|=0%+]"
+ ottoman_archipelago_vilayet_790_yes:0 "\n§Y[790.GetName]§!:[TUR_greek_population_790]"
+ ottoman_archipelago_vilayet_975_yes:0 "\n§Y[975.GetName]§!:[TUR_romanian_population_975]"
+ ottoman_archipelago_vilayet_974_yes:0 "\n§Y[974.GetName]§!:[TUR_romanian_population_974]"
+ ottoman_archipelago_vilayet_900_yes:0 "\n§Y[900.GetName]§!:[TUR_romanian_population_900]"
+ ottoman_archipelago_vilayet_164_yes:0 "\n§Y[164.GetName]§!:[TUR_romanian_population_164]"
+ ottoman_archipelago_vilayet_899_yes:0 "\n§Y[899.GetName]§!:[TUR_romanian_population_899]"
+ ottoman_archipelago_vilayet_183_yes:0 "\n§Y[183.GetName]§!:[TUR_romanian_population_183]"
+
+ TUR_biga_vilayet:0 "Mutasarrifate of Biga"
+ TUR_biga_vilayet_desc:0 "§W[ottoman_biga_vilayet_separatist_sentiments_desc]§!"
+ ottoman_biga_vilayet_tt_blocked:0 "[ottoman_biga_vilayet_separatist_sentiments]"
+ ottoman_biga_vilayet_separatist_sentiments_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_biga_vilayet_stability_factor][ottoman_biga_vilayet_war_support_factor][ottoman_biga_vilayet_political_power_factor]"
+ ottoman_biga_vilayet_separatist_sentiments_desc_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_biga_vilayet_stability_factor][ottoman_biga_vilayet_war_support_factor][ottoman_biga_vilayet_political_power_factor]\n§YModifiers:§![ottoman_biga_vilayet_861]"
+ ottoman_biga_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_biga_stability_factor|=2%+]"
+ ottoman_biga_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_biga_war_support_factor|=2%+]"
+ ottoman_biga_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_biga_war_support_factor|=0%+]"
+ ottoman_biga_vilayet_861_yes:0 "\n§Y[861.GetName]§!:[TUR_greek_population_861]"
+
+ TUR_hudavendigar_vilayet:0 "Hüdavendigar Vilayet"
+ TUR_hudavendigar_vilayet_desc:0 "§W[ottoman_hudavendigar_vilayet_separatist_sentiments_desc]§!"
+ ottoman_hudavendigar_vilayet_tt_blocked:0 "[ottoman_hudavendigar_vilayet_separatist_sentiments]"
+ ottoman_hudavendigar_vilayet_separatist_sentiments_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_hudavendigar_vilayet_stability_factor][ottoman_hudavendigar_vilayet_war_support_factor][ottoman_hudavendigar_vilayet_political_power_factor]"
+ ottoman_hudavendigar_vilayet_separatist_sentiments_desc_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_hudavendigar_vilayet_stability_factor][ottoman_hudavendigar_vilayet_war_support_factor][ottoman_hudavendigar_vilayet_political_power_factor]\n§YModifiers:§![ottoman_hudavendigar_vilayet_854][ottoman_hudavendigar_vilayet_825][ottoman_hudavendigar_vilayet_1015][ottoman_hudavendigar_vilayet_1016]"
+ ottoman_hudavendigar_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_hudavendigar_stability_factor|=2%+]"
+ ottoman_hudavendigar_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_hudavendigar_war_support_factor|=2%+]"
+ ottoman_hudavendigar_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_hudavendigar_war_support_factor|=0%+]"
+ ottoman_hudavendigar_vilayet_854_yes:0 "\n§Y[854.GetName]§!:[TUR_greek_population_854]"
+ ottoman_hudavendigar_vilayet_825_yes:0 "\n§Y[825.GetName]§!:[TUR_romanian_population_825]"
+ ottoman_hudavendigar_vilayet_1015_yes:0 "\n§Y[1015.GetName]§!:[TUR_romanian_population_1015]"
+ ottoman_hudavendigar_vilayet_1016_yes:0 "\n§Y[1016.GetName]§!:[TUR_romanian_population_1016]"
+
+ TUR_aydin_vilayet:0 "Aydın Vilayet"
+ TUR_aydin_vilayet_desc:0 "§W[ottoman_aydin_vilayet_separatist_sentiments_desc]§!"
+ ottoman_aydin_vilayet_tt_blocked:0 "[ottoman_aydin_vilayet_separatist_sentiments]"
+ ottoman_aydin_vilayet_separatist_sentiments_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_aydin_vilayet_stability_factor][ottoman_aydin_vilayet_war_support_factor][ottoman_aydin_vilayet_political_power_factor]"
+ ottoman_aydin_vilayet_separatist_sentiments_desc_yes:0 "Modify §YSeparatist Sentiments§! by[ottoman_aydin_vilayet_stability_factor][ottoman_aydin_vilayet_war_support_factor][ottoman_aydin_vilayet_political_power_factor]\n§YModifiers:§![ottoman_aydin_vilayet_339][ottoman_aydin_vilayet_824][ottoman_aydin_vilayet_340][ottoman_aydin_vilayet_342]"
+ ottoman_aydin_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_aydin_stability_factor|=2%+]"
+ ottoman_aydin_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_aydin_war_support_factor|=2%+]"
+ ottoman_aydin_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_aydin_war_support_factor|=0%+]"
+ ottoman_aydin_vilayet_339_yes:0 "\n§Y[339.GetName]§!:[TUR_greek_population_339]"
+ ottoman_aydin_vilayet_824_yes:0 "\n§Y[824.GetName]§!:[TUR_romanian_population_824]"
+ ottoman_aydin_vilayet_340_yes:0 "\n§Y[340.GetName]§!:[TUR_romanian_population_340]"
+ ottoman_aydin_vilayet_342_yes:0 "\n§Y[342.GetName]§!:[TUR_romanian_population_342]"
+
 
  TUR_armenian_millet_text_tt:0 "[TUR_armenian_millet_text_tt]"
  TUR_armenian_millet_modifiers_tt:0 "§YArmenian Millet Modifiers§!\nIncompatible Culture: §R-0.50%§!\nIncompatible Religion: §R-0.50%§!\n\n"
