--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -607,6 +607,7 @@
  VICTORY_POINTS_1056:0 "Homs"
  VICTORY_POINTS_3656:0 "Akhaltsikhe"
  VICTORY_POINTS_1088:0 "Latakia"
+ VICTORY_POINTS_12855:0 "Kut"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
