--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -608,6 +608,7 @@
  VICTORY_POINTS_3656:0 "Akhaltsikhe"
  VICTORY_POINTS_1088:0 "Latakia"
  VICTORY_POINTS_12855:0 "Kut"
+ VICTORY_POINTS_12318:0 "Bitlis"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
