immense work shall continue tomorrow

--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -678,6 +678,8 @@
  TUR_tax_collection_tt:0 "Effects for controller:\n£consumer_goods_texticon  Consumer Goods Factories: §Y-1.0%§!\n"
  TUR_tax_collection_dm:0 "Tax Collection"
  TUR_tax_collection_dm_desc:0 "Intensified tax collection in the state has increased the overall revenue of our treasury and our state."
+ TUR_vilayet_centralization:0 "Vilayet Centralization"
+ TUR_vilayet_centralization_desc:0 "Provinces, also known as Vilayets, of our empire do not function as integrated provinces. With every state having its own level of centralization, we have various control over them."
  TUR_armenian_minority:0 "£ww1_flag_ARM  §YArmenian Minority§!"
  TUR_armenian_minority_desc:0 "This state is home to many minorities, especially Armenians. As a result, the state suffers from difficulties with defending this territory and increased supply capabilities for the enemy among other things."
  TUR_arab_minority:0 "£ww1_flag_ARB  §YArab Minority§!"
