large part of variables done

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -659,7 +659,7 @@
  STATE_658: "Abu Dhabi"
  STATE_659: "Aden"
  STATE_660: "Equatorial Africa"
- STATE_661: "Trablusgarp"
+ STATE_661: "Jabal al Gharbi"
  STATE_662: "Upper Asir"
  STATE_663: "Cyrenaica"
  STATE_664: "Southern Slovakia"
