--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2850,7 +2850,25 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_millet_system:0 "Millet System"
  TUR_millet_system_desc:0 "For centuries, our empire has dominated three continents with various ethnic and religious backgrounds. Maintaining such a population required our empire to grand autonomy in self rule for the minorities. Though as the 20th century dawns, our empire lacked behind the level of centralization that of our contemporaries."
  TUR_millet_system_population_tt:0 "Minority Population"
- TUR_millet_system_onmap_tt:0 "On-Map Tooltips"
+ TUR_millet_system_population_button_tt:0 "[TUR_millet_system_population_button_tt]"
+ TUR_millet_system_population_button_tt_show:0 "Highlight §YMinority Population§! on Map"
+ TUR_millet_system_population_button_tt_hide:0 "Hide §YMinority Population§! on Map"
+ TUR_millet_system_population_button_tt_desc:0 "[TUR_millet_system_population_button_tt_desc]"
+ TUR_millet_system_population_button_tt_desc_show:0 "Selecting this decision will show states with specific minorities populating them."
+ TUR_millet_system_population_button_tt_desc_hide:0 "Selecting this decision will hide states with specific minorities populating them."
+ TUR_millet_system_onmap_button_tt:0 "[TUR_millet_system_onmap_button_tt]"
+ TUR_millet_system_onmap_button_tt_show:0 "Show §YOn-Map Tooltip§! for Vilayets"
+ TUR_millet_system_onmap_button_tt_hide:0 "Hide §YOn-Map Tooltip§! for Vilayets"
+ TUR_millet_system_onmap_button_tt_desc:0 "[TUR_millet_system_onmap_button_tt_desc]"
+ TUR_millet_system_onmap_button_tt_desc_show:0 "Selecting this decision will show on-map tooltips on states relating to their vilayets."
+ TUR_millet_system_onmap_button_tt_desc_hide:0 "Selecting this decision will hide on-map tooltips on states relating to their vilayets."
+ TUR_millet_system_description_button_tt:0 "[TUR_millet_system_description_button_tt]"
+ TUR_millet_system_description_button_tt_show:0 "Show §YOn-Map Description§! for Vilayets with On-Map Tooltip"
+ TUR_millet_system_description_button_tt_hide:0 "Hide §YOn-Map Description§! for Vilayets with On-Map Tooltip"
+ TUR_millet_system_description_button_tt_desc:0 "[TUR_millet_system_description_button_tt_desc]"
+ TUR_millet_system_description_button_tt_desc_show:0 "Selecting this decision will show descriptions for on-map tooltips."
+ TUR_millet_system_description_button_tt_desc_hide:0 "Selecting this decision will hide descriptions for on-map tooltips."
+ TUR_millet_system_onmap_tt:0 "On-Map Tooltip"
  TUR_millet_system_description_tt:0 "On-Map Description"
 
  TUR_no_vilayet_desc:0 "§W----------------------------§!"
