--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1019,6 +1019,8 @@
  STATE_1018: "Çatalca"
  STATE_1019: "İzmit"
  STATE_1020: "Maubegue-Givet"
+ STATE_1021: "Acre"
+ STATE_1022: "Bitlis"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
