--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2784,9 +2784,9 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_get_opda_name:0 "[TUR_get_opda_name]"
  TUR_get_opda_name_opda:0 "Ottoman Public Debt Administration"
  TUR_get_opda_name_opd:0 "Ottoman Public Debt"
- debt_less_than_0:0 "£consumer_goods_texticon  Consumer Goods Factories factor value on §Y[TUR_get_opda_name]§! is more than §Y0.0%§!\n"
- debt_less_than_75:0 "£consumer_goods_texticon  Consumer Goods Factories factor value on §Y[TUR_get_opda_name]§! is more than §Y75.0%§!\n"
- debt_less_than_45:0 "£consumer_goods_texticon  Consumer Goods Factories factor value on §Y[TUR_get_opda_name]§! is more than §Y45.0%§!\n"
+ debt_less_than_0:0 "£consumer_goods_texticon  Consumer Goods Factories factor value on §Y[TUR_get_opda_name]§! is less than §Y0.0%§!\n"
+ debt_less_than_75:0 "£consumer_goods_texticon  Consumer Goods Factories factor value on §Y[TUR_get_opda_name]§! is less than §Y75.0%§!\n"
+ debt_less_than_45:0 "£consumer_goods_texticon  Consumer Goods Factories factor value on §Y[TUR_get_opda_name]§! is less than §Y45.0%§!\n"
  TUR_declare_moratorium:0 "Declare Moratorium"
  TUR_declare_moratorium_desc:0 "Our debt has become more than what we're able to pay. By declaring a moratorium, we'll be able to reduce the effects of our current debt. Yet this decision of ours in the long run will strain our economy."
  TUR_foreign_debt_payment:0 "[FROM.GetAdjective] Debt Payment"
